--- a/footerBonanno.html
+++ b/footerBonanno.html
@@ -23,5 +23,31 @@
         </td>
     </tr>
 </table>
+<table style="width: 100%; padding: 10px; font-family: Arial, Helvetica, sans-serif;">
+    <tr>
+        <td style="width: 10%">
+            <img src="./flexAbilities-vert-01.png" alt="" width="100%">
+        </td>
+        <td style="padding: 10px;">
+            <table>
+                <tr>
+                    <td style="font-weight: bold;">Sarah Bonanno</td>
+                </tr>
+                <tr>
+                    <td>Alex Thiele</td>
+                </tr>
+                <tr>
+                    <td>Client Support Specialist</td>
+                </tr>
+                <tr>
+                    <td>E: info@flexAbilities.com.au</td>
+                </tr>
+                <tr>
+                    <td>M: 0416 312 093</td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table>
 </body>
 </html>
