--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
         <td style="padding: 10px;">
             <table>
                 <tr>
-                    <td style="font-weight: bold;">Sarah Bonanno</td>
-                </tr>
-                <tr>
-                    <td>Alex Thiele</td>
+                    <td style="font-weight: bold;">Alex Thiele</td>
                 </tr>
                 <tr>
                     <td>Client Support Specialist</td>
